Aligned dropdown. Still needs Fixing.
Dropdown overlay not displaying. Still needs work. Will work on it soon.

--- a/index.css
+++ b/index.css
@@ -92,7 +92,9 @@ a {
     background-color: orange;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: auto;
+    padding: 0;
+    margin: 0;
   }
   
   /* Links inside the dropdown */
